# docker-simple-dns

./: Dockerfile  LICENSE  README.md  docker-compose.build.yaml  docker-compose.yaml  pyproject.toml  tests.py
docker/: Corefile  hosts
docker_simple_dns/: docker_simple_dns.py  runner.py
